# benchmarks

./: .gitignore  README.md  benchmark.py  cache.json  main.py  pyproject.toml
pdf_benchmark/: library_code.py
read/results/borb/: 2201.00022.txt
read/results/pdfium/: 1601.03642.txt  1602.06541.txt  1707.09725.txt  2201.00021.txt  2201.00022.txt  2201.00029.txt  2201.00037.txt  2201.00069.txt  2201.00151.txt  2201.00178.txt  2201.00200.txt  2201.00201.txt  2201.00214.txt  GeoTopo-book.txt
read/results/pdfminer/: 1601.03642.txt  1602.06541.txt  1707.09725.txt  GeoTopo-book.txt
read/results/pdfplumber/: 1601.03642.txt  1602.06541.txt  1707.09725.txt  2201.00021.txt  2201.00022.txt  2201.00029.txt  2201.00037.txt  2201.00069.txt  2201.00151.txt  2201.00178.txt  2201.00200.txt  2201.00201.txt  2201.00214.txt  GeoTopo-book.txt
read/results/pdftotext/: 2201.00021.txt
read/results/playa/: 1601.03642.txt  1602.06541.txt  1707.09725.txt  2201.00021.txt  2201.00022.txt  2201.00029.txt  2201.00037.txt  2201.00069.txt  2201.00151.txt  2201.00178.txt  2201.00200.txt  2201.00201.txt  2201.00214.txt  GeoTopo-book.txt
read/results/pymupdf/: 1601.03642.txt  1602.06541.txt  1707.09725.txt  2201.00021.txt  2201.00022.txt  2201.00037.txt  2201.00069.txt  2201.00151.txt  2201.00178.txt  2201.00200.txt  2201.00201.txt  2201.00214.txt  GeoTopo-book.txt
read/results/pypdf/: 1601.03642.txt  1602.06541.txt  1707.09725.txt  2201.00021.txt  2201.00022.txt  2201.00029.txt  2201.00037.txt  2201.00069.txt  2201.00151.txt  2201.00178.txt  (+4 more)
requirements/: dev.txt  main.in  main.txt
(+9 files in other folders)
