[project]
name = "pdf-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pdfrw>=0.4",
    "pdftotext>=3.0.0",
    "playa-pdf>=0.9.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "pypdfium2>=5.3.0",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "tika>=3.1.0",
]

[tool.isort]
profile = "black"
