[project]
name = "pdf-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "numpy",
    "pdfminer-six",
    "pdfplumber",
    "pdfrw",
    "pdftotext",
    "playa-pdf",
    "pydantic",
    "pymupdf",
    "pypdf",
    "pypdfium2",
    "python-levenshtein",
    "requests",
    "rich",
    "tika",
]

[tool.isort]
profile = "black"
